fixing laboratories not showing

--- a/exams-app/src/app/laboratory-edit/laboratory-edit.component.css
+++ b/exams-app/src/app/laboratory-edit/laboratory-edit.component.css
@@ -1,8 +1,5 @@
 .video-container{
-    width:100%;
     margin:20px;
-    display: flex;
-    justify-content: center;     
 }
 video{
     width:640px;
